# haskell-template

./: .travis.yml  stack-lts-2.yaml  stack-lts-6.yaml  stack-lts-9.yaml
foo/: foo.cabal  package.yaml
