name: foo
version: 0.0.0.1
category: ...
synopsis: ...

description: ...

homepage:    https://github.com/chris-martin/foo
bug-reports: https://github.com/chris-martin/foo/issues

author:     Chris Martin <ch.martin@gmail.com>
maintainer: Chris Martin <ch.martin@gmail.com>

license: Apache-2.0
license-file: license.txt

build-type: Simple
cabal-version: >= 1.10

source-repository head
  type: git
  location: https://github.com/chris-martin/foo

library
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -Wall
  build-depends:
      base
  exposed-modules:
      Foo

test-suite doctest
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: doctest.hs
  hs-source-dirs: test
  ghc-options: -Wall -threaded
  build-depends: base, doctest

test-suite hedgehog
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: hedgehog.hs
  hs-source-dirs: test
  ghc-options: -Wall -threaded
  build-depends: base, foo, hedgehog
